--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@ body
 ==================================================*/
 .header
 {
-	background: url('../images/banco.jpg');
+	background: url('../images/porta.jpeg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
